add repository for product